--- a/admin/ts/views/EditPostView.html
+++ b/admin/ts/views/EditPostView.html
@@ -32,7 +32,9 @@
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<i class="fa fa-bookmark-o"></i> Meta
-								<div class="pull-right"><!-- <input name="published" type="checkbox" value=""> Published --></div>
+								<div class="pull-right">
+									<input name="published" type="checkbox" ng-model="edit.post.published"> Published
+								</div>
 							</div>
 							<!-- /.panel-heading -->
 							<div class="panel-body">
