--- a/admin/styles/sb-admin.css
+++ b/admin/styles/sb-admin.css
@@ -10,6 +10,7 @@ body {
     /*padding-top: 100px;*/
     background-color: #f8f8f8;
 	height: 100%;
+	overflow-y: scroll;
 }
 
 @media(min-width:768px) {
